# img_border_detection

./: README.md
Informe/: 01-Intro.tex  02-Background.tex  03-Method.tex  04-Experimental.tex  05-Conclusions.tex  PLACEHOLDERS.md  biblio.bib  main.aux  main.dvi  main.out  main.tex
advisor/bdet_auto/: annotations.advidb2  bdet_auto.advixeproj
advisor/bdet_auto/e000/: callstacks.def  e000.advixeexp  loop_hashes.def
advisor/bdet_auto/e000/hs001/: hs001.advixe  issues.xml  metrics.advisum  recommendations.advisum  threading.advisum
advisor/bdet_explicit/: bdet_explicit.advixeproj
advisor/bdet_explicit/e000/: callstacks.def  e000.advixeexp  loop_hashes.def  settings.xml
advisor/bdet_explicit/e000/hs000/: hs000.advixe  issues.xml  metrics.advisum  recommendations.advisum  vectorization.advisum
advisor/bdet_guided/: annotations.advidb2  bdet_guided.advixeproj  project_read_only.infoadvixe
advisor/bdet_guided/e000/: callstacks.def  e000.advixeexp  loop_hashes.def  settings.xml
advisor/bdet_guided/e000/hs000/: hs000.advixe  issues.xml  metrics.advisum  recommendations.advisum  (+1 more)
cpp/: CMakeLists.txt  Makefile  README.md  common.h  edge_auto  edge_auto.cpp  edge_auto.optrpt  edge_explicit  edge_explicit.cpp  edge_explicit.optrpt  edge_implicit  edge_implicit.cpp  edge_implicit.optrpt  edge_scalar  edge_scalar.cpp
img/: bee.pgm  bee_output_explicit.pgm  guitar.pgm  guitar_output_explicit.pgm  input.pgm  output_auto.pgm  output_explicit.pgm  road.pgm  road_output_explicit.pgm
python/: README.md  edge_detection.ipynb  export_pgm.py  requirements.txt
(+31 files in other folders)
